--- a/contents/css/styles.css
+++ b/contents/css/styles.css
@@ -31,10 +31,10 @@ nav:first-of-type {
 }
 
 nav:first-of-type div:first-of-type {
-display: flex;
-flex-direction: column;
-cursor: pointer;
-gap: 5px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 5px;
 }
 
 header img:not(nav:first-of-type div img) {
@@ -161,6 +161,7 @@ footer {
     background-color: var(--primary-color);
     text-align: center;
     padding: 0.10em;
+    margin-top: 2em;
 }
 
 footer aside{
@@ -168,3 +169,97 @@ footer aside{
     text-align: center;
     padding: 0.10em;
 }
+
+footer section {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    text-align: left;
+    color: var(--font-color);
+}
+footer section article {
+    padding: 20px;
+}
+footer section h1 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+footer section p {
+    margin: 5px 0;
+}
+footer input {
+    width: 93%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid var(--font-color);
+    border-radius: 4px;
+}
+footer button {
+    padding: 10px 20px;
+    background-color: var(--third-color);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+    color: var(--font-color);
+}
+footer button:hover {
+    background-color: var(--secondary-color);
+    color: var(--black-color);
+}
+
+footer img {
+    width: 20px;
+    margin-right: 10px;
+}
+
+@media (max-width: 1180px) {
+    header img:not(nav:first-of-type div img) {
+        display: none;
+    }
+    nav:first-of-type div:first-of-type span {
+        width: 30px;
+    }
+    nav:nth-of-type(2) ul {
+        justify-content: center;
+    }
+    nav:nth-of-type(2) ul li:nth-child(2) {
+        margin-right: 0;
+    }
+}
+
+@media (max-width: 800px) {
+    nav:nth-of-type(2) ul {
+        flex-direction: column;
+        align-items: center;
+    }
+    nav:nth-of-type(2) ul li {
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
+    }
+    nav:nth-of-type(2) ul li:nth-child(2) {
+        margin-right: 0;
+    }
+    nav:nth-of-type(2) ul a {
+        padding: 10px 0;
+    }
+    nav:nth-of-type(2) {
+        position: relative;
+        top: -5em;
+    }
+    
+}
+@media (max-width: 500px) {
+    header nav:first-of-type .profil img {
+        display: none;
+    }
+}
+
+@media (max-width: 420px) {
+    header nav:first-of-type .btn-create-account {
+        display: none;
+    }
+}
+
