--- a/contents/css/styles.css
+++ b/contents/css/styles.css
@@ -214,6 +214,17 @@ footer img {
     margin-right: 10px;
 }
 
+footer a {
+    color: var(--black-color);
+}
+
+footer aside a:hover {
+    color: var(--font-color);
+    background-color: var(--primary-color);
+    padding: 10px;
+    border-radius: 20px;
+}
+
 @media (max-width: 1180px) {
     header img:not(nav:first-of-type div img) {
         display: none;
